tests/typechecking/invalid/2-call_to_external_functions/call_to_intern_function_with_bad_args.ml
let a = 3.0 in
  let b = 5.2 in
    let c = a +. b in
      print_int(c)